# knuth

./: .gitignore  AGENTS.md  CONTEXT.md  README.md  pyproject.toml
.scratch/ai-shell-e2e/: .gitignore  run_e2e.py
.scratch/chatgpt-subscription-auth/: PRD.md
.scratch/knuth-cli-repl-input/: PRD.md
.scratch/knuth-im-desktop-settings/: PRD.md
.scratch/knuth-im-electron-sidecar/: PRD.md
apps/knuth-im-web/: .env.example  .gitignore  README.md  next.config.mjs  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
docs/: 2026-06-18-runtime-event-tui-design.md  artifact-store-and-condensation-implementation.md  brainstorm.md  interactive-commands-design.md  interrupt-requirements-and-design.md  knuth v0 方案.md  knuth-v0-design.md  litellm-langfuse.md  message-middleware-requirements-and-design.md  message-projection-checkpoints.md  resume-interrupt-findings.md  skills-requirements-and-design.md  tape-identity-and-projection-refactor.md
docs/agents/: domain.md
docs/decisions/: ADR-002-strongly-typed-events.md  ADR-003-system-preamble.md  (+8 more)
scripts/: llmd_event_probe.py  llmd_event_tui.py  runtime_event_tui.py
tests/: cli_repl_pty_driver.py  test_agui_debug_routes.py  test_agui_live.py  test_agui_spike.py  test_artifacts.py  test_cli.py  test_cli_file_tools.py  test_cli_interrupt.py  test_cli_render.py  test_cli_repl_pty.py  test_cli_search_tools.py  test_cli_shell_tool.py  test_core.py  test_interrupt_ledger.py  test_interrupt_runtime.py  test_interrupt_tools.py  test_knuth_im.py  test_knuth_im_sidecar.py  test_llmd.py  test_llmd_event_probe.py  test_llmd_event_tui.py  test_message_projection_checkpoints.py  test_observation.py  test_runtime.py  test_runtime_event_tui.py  test_skills.py  test_toold.py
(+39 files in other folders)
