[project]
name = "knuth"
version = "0.1.0"
description = "Knuth agent framework"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anyio>=4.12.0",
    "knuth-core",
    "knuth-llmd",
    "knuth-runtime",
    "knuth-toold",
]

[dependency-groups]
dev = ["knuth-cli"]

[tool.uv.workspace]
members = ["packages/*"]

[tool.uv]
package = false

[tool.uv.sources]
knuth-core = { workspace = true }
knuth-llmd = { workspace = true }
knuth-runtime = { workspace = true }
knuth-toold = { workspace = true }
knuth-cli = { workspace = true }
